# module_mediaplayer

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro  test.jks
lib_exoplayer_r2.19.1_full/: build.gradle  consumer-rules.pro
lib_exoplayer_r2.19.1_full/src/main/cpp/ffmpeg/: CMakeLists.txt  ffmpeg_jni.cc  ffmpeg_log.c  logging.c  logging.h
lib_exoplayer_r2.19.1_full/src/main/cpp/ffmpeg/ffmpeg3/arm64-v8a/include/libavutil/: ffversion.h
lib_exoplayer_r2.19.1_lite/: build.gradle  consumer-rules.pro  proguard-rules.pro
lib_exoplayer_r2.19.1_mini/: build.gradle  consumer-rules.pro
lib_mediaplayer_androidxplayer_common/: build.gradle
lib_mediaplayer_androidxplayer_r1.2.0/: build.gradle
lib_mediaplayer_androidxplayer_r1.2.0_full/: build.gradle
lib_mediaplayer_exoplayer_r1.5.15/: build.gradle
lib_mediaplayer_exoplayer_r2.18.6/: build.gradle  proguard-rules.pro
lib_mediaplayer_exoplayer_r2.18.6_full/: build.gradle
lib_mediaplayer_exoplayer_r2.18.6_full/src/main/cpp/ffmpeg/: CMakeLists.txt  ffmpeg_jni.cc  ffmpeg_log.c  ffmpeg_log.h
lib_mediaplayer_exoplayer_r2.18.6_full/src/main/cpp/ffmpeg/include/config/arm64-v8a/: config.h
lib_mediaplayer_exoplayer_r2.18.6_full/src/main/cpp/ffmpeg/include/config/armeabi-v7a/: config.h
lib_mediaplayer_exoplayer_r2.18.6_full/src/main/cpp/rtmp/: CMakeLists.txt
lib_mediaplayer_exoplayer_r2.18.7/: build.gradle
lib_mediaplayer_exoplayer_r2.18.7_full/: build.gradle
lib_mediaplayer_exoplayer_r2.19.0/: build.gradle
lib_mediaplayer_exoplayer_r2.19.0_full/: build.gradle
lib_mediaplayer_exoplayer_r2.19.1/: build.gradle
lib_mediaplayer_exoplayer_r2.19.1_full/: build.gradle  consumer-rules.pro  proguard-rules-dict-mini.txt  proguard-rules.pro
lib_mediaplayer_exoplayer_r2.19.1_lite/: build.gradle  consumer-rules.pro  proguard-rules-dict-mini.txt
lib_mediaplayer_exoplayer_r2.19.1_lite/src/main/cpp/rtmp/: CMakeLists.txt
lib_mediaplayer_exoplayer_r2.19.1_mini/: build.gradle  proguard-rules-dict-mini.txt
lib_mediaplayer_ffplayer_ff3.4.12/: build.gradle  proguard-rules.pro
lib_mediaplayer_ffplayer_ff3.4.12_full/: build.gradle
lib_mediaplayer_ffplayer_ff3.4.12_full/src/main/cpp/: CMakeLists.txt
lib_mediaplayer_ffplayer_ff3.4.12_full/src/main/cpp/ffmpeg3/armeabi-v7a/include/libffmpeg/: config.h
lib_mediaplayer_ffplayer_ff3.4.12_full/src/main/cpp/openssl/armeabi-v7a/include/openssl/: opensslconf.h
lib_mediaplayer_ffplayer_ff3.4.12_full/src/main/cpp/openssl/x86/include/openssl/: opensslconf.h
lib_mediaplayer_ffplayer_ff3.4.12_full/src/main/cpp/player/: ffmpeg_player.c  video_player.c  video_player.h
lib_mediaplayer_ffplayer_ff3.4.13_full/: build.gradle  consumer-rules.pro  proguard-rules-dict-mini.txt
lib_mediaplayer_ffplayer_ff3.4.13_lite/: build.gradle
lib_mediaplayer_ffplayer_ff3.4.13_mini/: build.gradle  consumer-rules.pro
lib_mediaplayer_ffplayer_ff3.4.13_mini/src/main/cpp/: CMakeLists.txt
lib_mediaplayer_ffplayer_ff3.4.13_mini/src/main/cpp/player/: SDL_android_main.c  audio_player.c
lib_mediaplayer_ffplayer_ff3.4.13_mini/src/main/cpp/sdl2/arm64-v8a/include-config-debug/: SDL_config.h
lib_mediaplayer_ffplayer_ff3.4.13_mini/src/main/cpp/sdl2/x86/include-config-debug/: SDL_config.h
lib_mediaplayer_ijkplayer_k0.8.8_ff3.4.0/: build.gradle  proguard-rules.pro
lib_mediaplayer_ijkplayer_k0.8.8_ff3.4.0_full/: build.gradle
lib_mediaplayer_ijkplayer_k0.8.8_ff3.4.12/: build.gradle
lib_mediaplayer_ijkplayer_k0.8.8_ff3.4.12_full/: build.gradle  proguard-rules.pro
lib_mediaplayer_ijkplayer_k0.8.8_ff3.4.13/: build.gradle  proguard-rules.pro
lib_mediaplayer_ijkplayer_k0.8.8_ff3.4.13_full/: build.gradle
lib_mediaplayer_ijkplayer_k0.8.8_ff3.4.13_lite/: build.gradle  consumer-rules.pro
lib_mediaplayer_ijkplayer_k0.8.8_ff3.4.13_mini/: build.gradle  consumer-rules.pro  proguard-rules-dict-mini.txt
lib_mediaplayer_ijkplayer_k0.8.8_ff3.4.13_mini_openssl/: build.gradle
lib_mediaplayer_ijkplayer_k0.8.8_ff3.4.8/: build.gradle
lib_mediaplayer_ijkplayer_k0.8.8_ff3.4.8_full/: build.gradle
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0/: build.gradle
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/: build.gradle
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/src/main/cpp/: CMakeLists.txt
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/src/main/cpp/ffmpeg4/arm64-v8a/include/libffmpeg/: config.h
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/src/main/cpp/ffmpeg4/armeabi-v7a/include/libffmpeg/: config.h
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/src/main/cpp/ffmpeg4/x86/include/libffmpeg/: config.h
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/src/main/cpp/ffmpeg4/x86_64/include/libffmpeg/: config.h
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/src/main/cpp/ijkmedia/ijkj4a/j4a/class/android/os/: Bundle.h
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/src/main/cpp/ijkmedia/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/misc/: IMediaDataSource.c
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/src/main/cpp/ijkmedia/ijkj4a/java/android/os/: Bundle.java
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/src/main/cpp/ijkmedia/ijkj4a/java/java/nio/: Buffer.java
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/src/main/cpp/ijkmedia/ijkplayer/android/: ijkplayer_jni.c
lib_mediaplayer_ijkplayer_k0.8.8_ff4.0_full/src/main/cpp/ijkmedia/ijksdl/android/: ijksdl_android_jni.c
lib_mediaplayer_ijkplayer_k0.8.8_ff4.4.4/: build.gradle
lib_mediaplayer_ijkplayer_k0.8.8_ff4.4.4_full/: build.gradle  proguard-rules-dict-mini.txt
lib_mediaplayer_ijkplayer_k0.8.8_ff4.4.4_lite/: build.gradle
lib_mediaplayer_ijkplayer_k0.8.8_ff4.4.4_mini/: build.gradle
lib_mediaplayer_media3player_r1.2.0/: build.gradle
lib_mediaplayer_media3player_r1.2.0_full/: build.gradle
lib_mediaplayer_media3player_r1.4.0/: build.gradle
lib_mediaplayer_media3player_r1.4.0_lite/src/main/cpp/ffmpeg/: CMakeLists.txt  ffmpeg_jni.cc
lib_mediaplayer_vlc_r3.5.1/src/main/cpp/: CMakeLists.txt  yyl_record.c
lib_mediaxplayer_r1.4.1_full/src/main/cpp/ffmpeg/: CMakeLists.txt  ffmpeg_jni.cc
(+2741 files in other folders)
